Replace access token with id token during MDM registration.

Bug: 898303
Change-Id: Icbc202b2924ebca3bd633073175f216b47a858d0
Reviewed-on: https://chromium-review.googlesource.com/c/1297449
Commit-Queue: Roger Tawa <rogerta@chromium.org>
Reviewed-by: Julian Pastarmov <pastarmovj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#603095}
Former-commit-id: ff15c07420a120b12944ac7da37e5270427c0132