chrome/credential_provider/gaiacp/dllmain.cc
@@ -152,7 +152,7 @@ void CALLBACK SaveAccountInfoW(HWND /*hwnd*/,
   std::unique_ptr<base::Value> properties =
       base::JSONReader::Read(buffer, base::JSON_ALLOW_TRAILING_COMMAS);
   if (!properties || !properties->GetAsDictionary(&dict)) {
-    LOGFN(ERROR) << "base::JSONReader::Read failed";
+    LOGFN(ERROR) << "base::JSONReader::Read failed length=" << buffer_len_bytes;
     hr = E_FAIL;
   }
 
